src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ASP_Based_On_POS__c</fullName>
        <description>This field is used to calculate average sell price value based on POS Resale value(USD) and POS Quantity.</description>
        <formula>IF((ISBLANK(POS_Quantity__c) || POS_Quantity__c=0 ), 0, POS_Resale_Value_USD__c / POS_Quantity__c)</formula>
        <label>ASP Based on POS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>Full Record Id of Account of Opportunity</description>
        <formula>Opportunity.Account.Account_ID_Full__c</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of Account of Opportunity</description>
        <formula>Opportunity.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL__c</fullName>
        <formula>PricebookEntry.Product2.BL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>PricebookEntry.Product2.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Value_USD__c</fullName>
        <description>Opportunity product claim value in USD.</description>
        <formula>IF (Opportunity.Locked_Exchange_Rate__c &lt;&gt; 0, Claim_Value__c / ROUND(Opportunity.Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity product claim value in USD.</inlineHelpText>
        <label>Prod Claim Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Value__c</fullName>
        <description>Opportunity product claim value in opportunity currency.</description>
        <inlineHelpText>Opportunity product claim value in opportunity currency.</inlineHelpText>
        <label>Prod Claim Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>New field from the merger</description>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALLWINNER TECHNOLOGY</fullName>
                </value>
                <value>
                    <fullName>ALPHA &amp; OMEGA SEMICONDUCTOR</fullName>
                </value>
                <value>
                    <fullName>AMAZING MICROELECTRONIC</fullName>
                </value>
                <value>
                    <fullName>AMPLEON </fullName>
                </value>
                <value>
                    <fullName>ANALOG DEVICES </fullName>
                </value>
                <value>
                    <fullName>APPLIED MICRO CIRCUITS </fullName>
                </value>
                <value>
                    <fullName>AVAGO TECHNOLOGIES </fullName>
                </value>
                <value>
                    <fullName>BOSCH GMBH </fullName>
                </value>
                <value>
                    <fullName>Cambridge Silicon Radio</fullName>
                </value>
                <value>
                    <fullName>CAVIUM</fullName>
                </value>
                <value>
                    <fullName>CIRRUS LOGIC </fullName>
                </value>
                <value>
                    <fullName>CYPRESS SEMICONDUCTOR </fullName>
                </value>
                <value>
                    <fullName>DIALOG SEMICONDUCTOR </fullName>
                </value>
                <value>
                    <fullName>DIODES</fullName>
                </value>
                <value>
                    <fullName>EZCHIP SEMICONDUCTOR </fullName>
                </value>
                <value>
                    <fullName>FAIRCHILD SEMICONDUCTOR</fullName>
                </value>
                <value>
                    <fullName>FLIR SYSTEMS </fullName>
                </value>
                <value>
                    <fullName>FUJITSU</fullName>
                </value>
                <value>
                    <fullName>HONEYWELL INTERNATIONAL </fullName>
                </value>
                <value>
                    <fullName>INFINEON TECHNOLOGIES </fullName>
                </value>
                <value>
                    <fullName>INTEL </fullName>
                </value>
                <value>
                    <fullName>INTERNATIONAL RECTIFIER</fullName>
                </value>
                <value>
                    <fullName>INVENSENSE </fullName>
                </value>
                <value>
                    <fullName>LINEAR TECHNOLOGY </fullName>
                </value>
                <value>
                    <fullName>LITTELFUSE</fullName>
                </value>
                <value>
                    <fullName>LRC</fullName>
                </value>
                <value>
                    <fullName>MACOM </fullName>
                </value>
                <value>
                    <fullName>MARVELL TECHNOLOGY GROUP </fullName>
                </value>
                <value>
                    <fullName>MAXIM INTEGRATED PRODUCTS </fullName>
                </value>
                <value>
                    <fullName>MEDIATEK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompetitorsStrengths__c</fullName>
        <description>to capture Competitor&apos;s strengths</description>
        <label>Competitor&apos;s Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors_Weaknesses__c</fullName>
        <description>to capture Competitor&apos;s Weaknesses</description>
        <label>Competitor&apos;s Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Component_Multiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field contains quantity per part from Model N.</description>
        <inlineHelpText>Qty per Sys should be integer.</inlineHelpText>
        <label>Qty per Sys</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Product_Revenue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows multiple opportunities for the same business without over counting the revenue in the pipeline.  Typical use is in Automotive so that OEM and  Tier One opportunities can both be tracked and included in DW Targets.</description>
        <inlineHelpText>Indicates if this revenue should be included in the pipeline. Unchecking Count Revenue is rare. For more information, see Multiparty Opportunity Management.</inlineHelpText>
        <label>z_OBSOLETED_Count ​Product Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Win__c</fullName>
        <description>Days since Design won for an item/part</description>
        <formula>Today() - Win_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Win</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Part_Active_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Design Reg Part Active Flag (SIR#1224)</description>
        <label>Design Reg Part Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Tracking_Number__c</fullName>
        <description>This field contains the Distributor tracking number for part form Model N system.</description>
        <label>Distributor Tracking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expert_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for xFSL WoW to be implemented in ModelN DR</description>
        <label>Expert Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Registration_Item__c</fullName>
        <description>Fields for xFSL WoW to be implemented in ModelN DR</description>
        <label>Final Reg Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guided_Expected_POS_USD__c</fullName>
        <description>Guided Expected POS per item/part in USD</description>
        <formula>IF(ISBLANK( Win_Date__c ) ,0, (MIN((Days_Since_Win__c / 365),3) * (Legacy_1_Year_Prod__c/ Opportunity.Locked_Exchange_Rate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guided Expected POS (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Help_Needed_History__c</fullName>
        <description>This field is created to track the History of &apos;Help Needed&apos; Data</description>
        <label>Help Needed History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Help_Needed__c</fullName>
        <inlineHelpText>Describe the internal help that is needed in order to increase Probability to Win to 80%-100%. Used for internal review of funnel.</inlineHelpText>
        <label>Help Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Warning__c</fullName>
        <description>This field is used for integration purpose. It display&apos;s the reason for the opportunities/lineitems which are assigned to Unknown account.</description>
        <label>Integration Warning</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LT_Value_USD__c</fullName>
        <description>Opportunity product lifetime value in USD.</description>
        <formula>IF (Opportunity.Locked_Exchange_Rate__c &lt;&gt; 0, LT_Value__c / ROUND(Opportunity.Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity product lifetime value in USD.</inlineHelpText>
        <label>Prod LT Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LT_Value__c</fullName>
        <description>Opportunity product lifetime value in opportunity currency.</description>
        <inlineHelpText>Opportunity product lifetime value in opportunity currency.</inlineHelpText>
        <label>Prod LT Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastUpdatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Business Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Products_Last_Updated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastUpdatedDate__c</fullName>
        <label>Last Business Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_1_Year_Prod__c</fullName>
        <description>This field contains the VALUE_1_YR_PROD from Model N system.</description>
        <label>One Year Prod Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_3_Year_Prod__c</fullName>
        <description>This field contains 3 year value(VALUE_1_YR_PROD*3).</description>
        <formula>(Legacy_1_Year_Prod__c * 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLETED_3 Year Production Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id is required for integration purpose.</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_Claim_Value_USD__c</fullName>
        <description>Opportunity product lost/cancelled claim value in USD.</description>
        <formula>IF (Opportunity.Locked_Exchange_Rate__c &lt;&gt; 0, Lost_Cancelled_Claim_Value__c / ROUND(Opportunity.Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity product lost/cancelled claim value in USD.</inlineHelpText>
        <label>Prod Lost/Cancelled Claim Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_Claim_Value__c</fullName>
        <description>Opportunity product lost/cancelled claim value in opportunity currency.</description>
        <inlineHelpText>Opportunity product lost/cancelled claim value in opportunity currency.</inlineHelpText>
        <label>Prod Lost/Cancelled Claim Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_LT_Value_USD__c</fullName>
        <description>Opportunity product lost/cancelled lifetime value in USD.</description>
        <formula>IF (Opportunity.Locked_Exchange_Rate__c &lt;&gt; 0, Lost_Cancelled_LT_Value__c / ROUND(Opportunity.Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity product lost/cancelled lifetime value in USD.</inlineHelpText>
        <label>Prod Lost/Cancelled LT Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_LT_Value__c</fullName>
        <description>Opportunity product lost/cancelled lifetime value in opportunity currency.</description>
        <inlineHelpText>Opportunity product lost/cancelled lifetime value in opportunity currency.</inlineHelpText>
        <label>Prod Lost/Cancelled LT Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <formula>PricebookEntry.Product2.MAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAG_for_Roll_Up__c</fullName>
        <label>MAG for Roll-Up</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItem_Id_Full__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>ID Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Full Record Id of Opportunity</description>
        <formula>Opportunity.Opportunity_ID_Full__c</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Name of Opportunity</description>
        <formula>Opportunity.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Production_Date__c</fullName>
        <description>Production Date of Opportunity</description>
        <formula>Opportunity.Production_Date__c</formula>
        <label>Opportunity Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POS_Quantity__c</fullName>
        <description>This field is used to capture the Quantity from Model N(POS_QTY_SHIPPED).</description>
        <label>POS Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_Resale_Value_USD__c</fullName>
        <description>Item POS resale value in dollars (USD)</description>
        <label>POS Resale Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Erosion_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price Erosion Rate (%)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_to_Win__c</fullName>
        <inlineHelpText>80-100%, Include in Most Likely for Qtr;	
50-80%, Define what is needed to win this Qtr. Actively working to move to 80-100% cat. List actions needed to secure win this Qtr in Help Needed;	
0-50%, Unlikely to close this Qtr. Not counted in Most</inlineHelpText>
        <label>Probability to Win</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>80% - 100%</fullName>
                </value>
                <value>
                    <fullName>50% - 80%</fullName>
                </value>
                <value>
                    <fullName>0% - 50%</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prod_Cancelled_Claim_Value_excl_Thrust__c</fullName>
        <description>This field is updated by trigger.</description>
        <inlineHelpText>The cancelled Prod. Claim Value (USD).
When Prod Lost/Cancelled, Prod. Claim Value (USD) will be reset to zero, therefore this field will show how much claim value was cancelled.</inlineHelpText>
        <label>z_OBSOLETED_Prod Lost/Cancelled CV (USD)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Claim_Value_Thrust_only_USD__c</fullName>
        <formula>Product_Thrust_Non_Thrust_DW_Value_USD__c - Product_Design_Win_Claim_Value_USD1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>[Prod. Claim Value incl. Thrust (USD)] 
subtracted by
[Prod. Claim Value excl. Thrust (USD)]</inlineHelpText>
        <label>z_OBSOLETED_Prod. Claim Value Thrust USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Claim_Value_excl_Thrust__c</fullName>
        <description>THE FORMULA OF THIS FIELD IS TEMPORARY
WILL NEED A SIP-HORIZON QUANTITY DEVELOPED</description>
        <formula>Product_Design_Win_Claim_Value_USD1__c * Opportunity.Locked_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The summary thru SIP horizon of all (Yearly Piece x Sales Price x Component Multiplier). 
This value uses opportunity currency</inlineHelpText>
        <label>z_OBSOLETED_Prod Claim Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prod_LT_Value_excl_Thrust_USD__c</fullName>
        <formula>IF (Opportunity.Locked_Exchange_Rate__c &lt;&gt; 0, LT_Value__c / Opportunity.Locked_Exchange_Rate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLETED_Prod LT Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_LT_Volume__c</fullName>
        <formula>IF(
    Prod_Lost__c, 
    0,
    Quantity  *  Component_Multiplier__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Life-time Total Pieces x Component Multiplier.  
If Product Lost, volume = 0</inlineHelpText>
        <label>z_OBSOLETED_Prod LT Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Lost_Cancelled_Date__c</fullName>
        <description>This field is updated by workflow.</description>
        <inlineHelpText>The date the product is Lost/Cancelled</inlineHelpText>
        <label>Prod Lost/Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prod_Lost_Cancelled_Reason__c</fullName>
        <description>Dependent picklist of Prod. Lost/Cancelled</description>
        <label>Prod Lost/Cancelled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prod_Lost_Cancelled__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Changing requirements</fullName>
                </value>
                <value>
                    <fullName>Lack of Technical Support Resources</fullName>
                </value>
                <value>
                    <fullName>Operational Performance</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Project not Lost but transferred to other SFDC Project</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Relation</fullName>
                </value>
                <value>
                    <fullName>Software/Operating System</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Stopped by Customer</fullName>
                </value>
                <value>
                    <fullName>Time to Market</fullName>
                </value>
                <value>
                    <fullName>Wrong Entry</fullName>
                </value>
                <value>
                    <fullName>Company Out of Business</fullName>
                </value>
                <value>
                    <fullName>Duplicate of Existing Opty</fullName>
                </value>
                <value>
                    <fullName>MPN EOL</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>No Commercial Relations</fullName>
                </value>
                <value>
                    <fullName>No Cust Contact Response</fullName>
                </value>
                <value>
                    <fullName>Not a Valid Cust/Project</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled by Cust</fullName>
                </value>
                <value>
                    <fullName>Project Delayed by Cust</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prod_Lost_Cancelled__c</fullName>
        <label>Prod Lost/Cancelled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prod_Lost_LT_Value_USD__c</fullName>
        <formula>IF( 
Prod_Lost__c,
(Quantity * Component_Multiplier__c * Prod_Price_USD__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLET_Prod Lost/Cancel LT Value(USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Lost_LT_Value__c</fullName>
        <description>Summary of all life-time [Yearly Pieces] x [Sales Price] x [Component Multiplier]. 
If Product is Lost.</description>
        <formula>IF( 
Prod_Lost__c,
Quantity * Component_Multiplier__c * UnitPrice, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLETED_Prod Lost/Cancelled LT Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Lost_Reason__c</fullName>
        <description>Prod. Lost Reason is mandatory when Prod Lost</description>
        <label>Prod Lost/Cancelled Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prod_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prod Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prod_Price_USD__c</fullName>
        <formula>IF (Opportunity.Locked_Exchange_Rate__c &lt;&gt; 0, UnitPrice / Opportunity.Locked_Exchange_Rate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>[Sales Price] converted to USD</inlineHelpText>
        <label>Price (USD)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Subtotal__c</fullName>
        <formula>Prod_LT_Volume__c * UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all life-time [Yearly Pieces] x [Sales Price] x [Component Multiplier]. 
This value excludes thrust calculation. 
If Product Lost, value = 0.</inlineHelpText>
        <label>z_OBSOLETED_Prod LT Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Active_Flag__c</fullName>
        <formula>IF(PricebookEntry.Product2.IsActive = true, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYSTEM USED - Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Active_Flags__c</fullName>
        <formula>IMAGE( 
CASE( Product_Active_Flag__c , 
&quot;TRUE&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;FALSE&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Design_Win_Claim_Value_USD1__c</fullName>
        <description>Original Label before Release 1506:  Product Design Win Claim Value (USD)</description>
        <inlineHelpText>The summary thru SIP horizon of all (Yearly Piece x Sales Price x Component Multiplier), converted to USD.</inlineHelpText>
        <label>z_OBSOLETED_Prod Claim Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Design_Win_Value_USD_1__c</fullName>
        <formula>Product_Design_Win_Claim_Value_USD1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLETED_Prod. Design Win Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Design_Win_Value_USD_2__c</fullName>
        <formula>IF( (ISBLANK(Opportunity.Currency__r.Exchange_Rate__c) || Opportunity.Currency__r.Exchange_Rate__c=0 ), 0 , (Product_Design_Win_Value_USD_1__c * Opportunity.Locked_Exchange_Rate__c)/Opportunity.Currency__r.Exchange_Rate__c)</formula>
        <label>z_OBSOLETED_Prod. Design Win Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>Full Record Id of Porduct</description>
        <formula>PricebookEntry.Product2.Product_ID_Full__c</formula>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Name of Product</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>SYSTEM USED - Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Thrust_DW_Value__c</fullName>
        <formula>IF( Opportunity.RecordType.DeveloperName = &apos;SFDC_Oppty&apos;,
IF( Prod_Lost__c , 0 , 
IF( Thrust_Indicator__c =True, 
IF( YEAR(Opportunity.Design_Win_Submission_Date__c)&lt;=2013, 
IF( BU__c =&quot;511&quot;, 
IF(AND(YEAR(Opportunity.Design_Win_Submission_Date__c)&lt;2013, OR(YEAR( Opportunity.Design_Win_Approval_Date__c )&lt;=2013, TEXT(Opportunity.Design_Win_Approval_Process__c)= &quot;Pending&quot;)), Product_Design_Win_Claim_Value_USD1__c , 2*Product_Design_Win_Claim_Value_USD1__c), 
Product_Design_Win_Claim_Value_USD1__c),1.5*Product_Design_Win_Claim_Value_USD1__c),0)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Thrusted product, Product Design Win Claim Value (USD) x Thrust Multiplier ;  
If Non-Thrusted product, value = zero</inlineHelpText>
        <label>z_OBSOLETED_Product Thrust DW Value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Thrust_Non_Thrust_DW_Value_USD__c</fullName>
        <description>Original Label before Release 1506: Product Thrust+Non Thrust DW Value(USD)</description>
        <formula>IF(Prod_Lost__c, 0, Product_Design_Win_Claim_Value_USD1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLETED_Prod. Claim Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Program</label>
        <referenceTo>OpportunityProgram__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Effort_Description__c</fullName>
        <description>Registration Effort Description from Model N</description>
        <label>Margin Qual</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Effort_Percentage__c</fullName>
        <description>Registration effort in percentage from Model N</description>
        <label>Reg Effort %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <description>Part Registration Status</description>
        <label>Reg Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Item__c</fullName>
        <formula>PricebookEntry.Product2.Sales_Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Share (%)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Socket__c</fullName>
        <label>Socket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anchor - Main Product</fullName>
                </value>
                <value>
                    <fullName>Attach - Additional Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spin_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked products will be spun off to a new opportunity</description>
        <inlineHelpText>Checked products will be spun off to a new opportunity</inlineHelpText>
        <label>Spin Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thrust_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>z_OBSOLETED_Thrust Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Win_Date__c</fullName>
        <description>Design win date per part which is WIN_DATE from Model N.</description>
        <label>Win Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Win_Status__c</fullName>
        <description>Design win status per part which is STATUS from Model N.</description>
        <label>Win Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2010_Value__c</fullName>
        <label>2010 Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2011_Value__c</fullName>
        <label>2011 Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2012_Value__c</fullName>
        <label>2012 Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>